--- a/src/pages/EntityPage/entity-page.css
+++ b/src/pages/EntityPage/entity-page.css
@@ -1,7 +1,8 @@
 .entity-page {
   height: calc(100% - 96px);
+  margin-top: 8px;
 }
 
 .content {
-  height: calc(100% - 164px);
+  height: calc(100% - 128px);
 }
