--- a/src/projects/snake/snake.css
+++ b/src/projects/snake/snake.css
@@ -66,6 +66,10 @@
   font-size: 48px;
 }
 
+.score .highest {
+  font-size: 16px;
+}
+
 .tutorial {
   position: absolute;
   left: 0; top: 0; bottom: 0; right: 0;
@@ -73,7 +77,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  z-index: 10;
+  z-index: 4;
   color: #414542;
   background-color: rgba(248, 248, 248, 0.5);
 }
@@ -82,25 +86,48 @@
   position: absolute;
   right: 16px;
   top: 16px;
-  padding: 4px 8px;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #424242;
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  font-weight: bold;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.05);
   border: 0;
-  border-radius: 4px;
+  border-radius: 6px;
+  z-index: 10;
+  transition: 0.1s ease;
+}
+
+.mobile-switch:hover {
+  transform: scale(0.9);
 }
 
 .mobile-buttons {
-  z-index: 10;
+  z-index: 5;
   position: fixed;
-  bottom: 32px;
+  bottom: 0;
   width: 100%;
+  height: 33.3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .mobile-button {
-  display: block;
-  padding: 8px 16px;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: #424242;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1.5;
+  color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.05);
   border: 0;
   border-radius: 4px;
+  margin: 2px;
+  width: 33%;
+  transition: 0.1s ease;
+}
+
+.mobile-button:hover {
+  transform: scale(0.9);
 }
